--- a/client/src/pages/member/Member.scss
+++ b/client/src/pages/member/Member.scss
@@ -32,7 +32,8 @@
             }
 
             tbody{
-                tr{                    
+                tr{
+                    text-transform: capitalize;                    
                     td{
                         padding: 5px;
                         text-align: left;
