--- a/client/src/pages/alarms/Alarms.scss
+++ b/client/src/pages/alarms/Alarms.scss
@@ -36,6 +36,13 @@
                 border-bottom: 1px solid lightgray;
                 padding: 0px 2px;
             }
+            
+            select{
+                border-top: 0px;
+                border-left: 0px;
+                border-right: 0px;
+                border-bottom: 1px solid lightgray;
+            }
         }
 
         button{
